# tempseis

./: .gitignore  README.md  copying_across_script  forward_modelling.f  jobaspect2_confined  making_plots_script  requirements.txt  run_inversion  setup.py  stress_drop_loop_script  total_proc_script
Inversion/: Makefile  homti_na.f
Inversion/NA/: plot_marginals 2.py
Inversion/NA/data/: best_model 2.asc  best_model 3.asc  best_model.asc  fort.978115241 3  jobaspect2_confined  looping_final_paramiters.sh  misfit.csv  na.det  na.in.save  na.nad  na.sum  observed  output  plot_data_synt.py  plot_temp.py  predicted  removal_of_stations.py  run.sh  run_inversion.py  side.csv  side2.csv
Inversion/NA/src/: Makefile  Makefile 2  (+7 more)
Inversion/Plot_results/: plot_correlations.py  plot_fault_results.py  readme
Inversion/Preparation/: create_station_file.py  create_station_file_azimut.py  readme  scalar_moment.py
Inversion/Results/: readme
Inversion/data/: .gitignore  README.md  homti.in  homti_param  na.in
Inversion/homti_subs/: display_final.f  display_model.f  forward_modelling.f  read_vmodelNA.f
Inversion/src/: Makefile  homti_na.f  makena.macros
calculate_derivatives/: calculate_derivatives.py  readme
data_processing/: add_real_noise.py  cut_and_filter_traces.py  final_check_plots.py  processingscript.sh  rotate.macro  rotate_traces.py
database/: README.md  readme
lib/: process_syn.pl  readme  rotate.pl
lib/seis_process/: Makefile  Makefile.am  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  functions.py  process_data_user.pl  readme
pytempseis/: __init__.py  create_station_file_azimut.py  create_station_inversion_input.py  forward_functions.py  forward_problem.py  functions.py  scalar_moment.py
pytempseis.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pytempseis/dataprocessing/: __init__.py  add_real_noise.py  automatic_time_windowing.py  automatic_time_windowing_FILTERING_TRIAL.py  calculate_derivatives.py  compare_seismograms.py  cut_and_filter_traces.py  cut_and_filter_traces_FILTERING_TRIAL.py  distance_azimuth.py  final_check.py  macro  parameters.yml  plot_seismograms.py  plotting_filtering_comparison.py  process_data.py  readme  real_check_data.py  real_flip.py  real_preprocessing.py  rotate_traces.py  step0_REAL.py  step1_REAL_check_data.py  step1_SYNT.py  step2_REAL_flip.py  synth_centroid_time.py  synth_rotate_traces.py
pytempseis/plot/: plot_correlations.py  plot_data_synt.py  plot_fault_results.py  plot_forward_modelling_test.py  plot_results_subplot.py  plot_seismograms.py  plot_seismograms2.py  plot_station_azimuth.py  plot_station_map_body_surface.py  plot_temp.py  readme
(+164 files in other folders)
